@@ -132,6 +132,8 @@ Version 2.1.1
    - Bugfix: Segmentation faults when selecting mails in popup while updating
    - New files for class Header, cleanup of this class
    - Added Tim Bishop to maintainers, updated some dates to 2005
+   - Bugfix: Only don't send CAPABILITY command if all capabilities are
+        present in the response code (IMAP4)
 
 Version 2.1.0
  * Nicolas Rougier
